--- a/mgsb.bib
+++ b/mgsb.bib
@@ -1,10 +1,3 @@
-  @misc{ fonte:xxx,
-   author = "Mariana Martucci",
-   title = "A pandemia fez o e-commerce decolar. Ainda há fôlego para mais?",
-   year = "2021",
-   url = "\url{https://exame.com/negocios/a-pandemia-fez-o-e-commerce-decolar-ainda-ha-folego-para-mais/}",
-   note = "[Online; accessed 16-abril-2022]"
- }
  @misc{ img:graph,
  author = "Carlos E.",
  title = "O Que é e-commerce: Todos os Detalhes + Como Começar o Seu",
@@ -12,12 +5,21 @@
  url = "\url{https://www.hostinger.com.br/tutoriais/o-que-e-e-commerce}",
  note = "[Online; accessed 16-abril-2022]"
  
+ } 
+  
+  @misc{ fonte:xxx,
+   author = "Mariana Martucci",
+   title = "A pandemia fez o e-commerce decolar. Ainda há fôlego para mais?",
+   year = "2021",
+   url = "\url{https://exame.com/negocios/a-pandemia-fez-o-e-commerce-decolar-ainda-ha-folego-para-mais/}",
+   note = "[Online; accessed 16-abril-2022]"
  }
+ 
   @misc{ fonte:xxb,
-   author = "Wikipédia",
-   title = "Algoritmo de Dijkstra --- Wikipédia{,} a enciclopédia livre",
-   year = "2019",
-   url = "\url{https://pt.wikipedia.org/w/index.php?title=Algoritmo_de_Dijkstra&oldid=56620455}",
-   note = "[Online; accessed 2-novembro-2019]"
+   author = "Arcana",
+   title = "A importância do e-commerce para as empresas em 2022",
+   year = "2021",
+   url = "\url{https://www.arcanamarketingdigital.com.br/a-importancia-do-e-commerce-para-as-empresas/#:~:text=Dessa%20forma%2C%20o%20comércio%20eletrônico,produtos%2C%20marcas%20e%20serviços%20associados.}",
+   note = "[Online; accessed 16-abril-2022]"
  }
  
