--- a/mgsb.tex
+++ b/mgsb.tex
@@ -19,7 +19,7 @@
 
 \begin{figure}[h!]
 \centering
-    \includegraphics[width=90mm]{ecommerce.png}
+    \includegraphics[width=80mm]{ecommerce.png}
     \caption{Ilustração sobre \textit{E-commmerce}. \cite{img:graph}}
     \label{fig:graph1}
 \end{figure}
@@ -31,9 +31,7 @@ O comércio eletrônico(ou /textit{E-commerce}) se refere a todas as transaçõe
 
 \section{Relevância}
 \paragraph
-O valor do comércio eletrônico é dado quando se reflete na possibilidade de mudança que ele proporciona. O \textit{E-commmerce} oferece novas possibilidades para negócios que anteriormente seriam impensáveis, como um pequeno comerciante que devido a esse novo paradigma, pode atender um número muito mais alto de consumidores e de diferentes localizações, muitas vezes lugares distantes. Ademais, essa modalidade de comércio também traz mudanças para outras áreas do comércio que não necessariamente a compra de um produto, mas para com o pós compra(as avaliações, o atendimento ao cliente) e o pré compra(marketing).
-\cite{de2016commerce}
-\cite{diniz1999comercio}
+Pela facilidade de fazer uma compra no conforto de sua casa e pelo fato de ter ocorrido um lockdown devido à pandemia de COVID=19 no mundo todo, o comércio eletrônico se tornou algo indispensável na vida dos cidadãos. No Brasil, mais de 7 milhões de brasileiros fizeram uma compra online pela primeira vez no 1º semestre de 2020 \cite{fonte:xxx} o que representa uma relação direta com o auge do isolamento social na maioria das cidade brasileiras. Devido ao grande aumento de consumidores, ficou cada vez mais importante a presença do comércio eletrônico na sociedade, tanto como um complemento ao modelo de negócio convencional, tanto comoforma de impulsionar as vendas e alcançar diferentes públicos. Pois, além de sua importância com vendas diretas, o \textit{E-commerce} é uma ferramenta de marketing que auxilia na divulgação de produtos, marcas e serviços.\cite{fonte:xxb} Tendo em vista isso, a necessidade de se ter uma cadeira para estudar e se especializar nessa área se torna indispensável para o Centro de Informática(UFPE).
 
 
 \section{Relações com outras disciplinas}
